Fix T58360 "Use object as pivot" in GP "Shadow effect" crashes Blender